2010-12-31  Christopher  <chrissitopher@gmx.de>

	* Fixed bug #11776: URL/Linktarget for files is broken
	* Fixed bug #11800: Checkboxes showing the number of broken links do not display the value "zero"
	* Fixed bug #11803: Fix locallang files
	* Fixed bug #11801: Variable in the message "Page '' does not exist." will never be filled

2010-12-30  Christopher  <chrissitopher@gmx.de>

	* Fixed bug #11779: Unify usage of tooltips in table rows
	* Fixed bug #11775: Table should use new design for TYPO3 4.5
	* Fixed bug #11796: Improve usage of $GLOBALS['LANG']

2010-12-28  Pierre Boivin <pierre.boivin@infoglobe.ca>

	* Fixed bug #11715: Use localized format for date and time

2010-12-06  Pierre Boivin <pierre.boivin@infoglobe.ca>

	* Fixed bug : #11277: Initialize and other methods in modfunc1 could be protected
	* Fixed bug : #11278: Create an interface for the linktype classes
	* Fixed bug : #10589: HTTP errors might not be detected (Thanks to Tolleiv Nietsch)
	* Fixed bug : #11274: Change true to 1 for showUpdateButton
	* Fixed bug : #11272: Fix dos line endings in ext_tables.php
	* Fixed bug : #11270: List in the BE module should be sorted by record
	* Fixed bug : #11275: Remove clear.gif in modfunc1
	* Fixed bug : #10987: linkvalidator doesn't detect hidden page (Thanks to Joh. Feustel)

2010-12-03  Pierre Boivin <pierre.boivin@infoglobe.ca>

	* Fixed bug : #11271: Lowercase all filenames
	* Fixed bug : #11280: Refactor class tx_linkvalidator_processing
	* Fixed bug : #10907: invalid external url not detected

2010-11-22  Tolleiv Nietsch  <info@tolleiv.de>

	* Fixed bug: #10988: getBrokenUrl returns wrong url (Thanks to Johannes Feustel)

2010-11-20  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #10998: Rename and move link classes and processing class

2010-11-17  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #10912: Rename and move task to classes/tasks and change locallang namespace