@@ -9,31 +9,19 @@
             ###CONTENT###
 <!-- ###FULLDOC### end -->
 <!-- ###CHECKOPTIONS_SECTION### begin -->
-    <table class="linkvalidator_table">
-        <tr>	  
+    <table class="typo3-dblist" id="linkvalidator_table" cellspacing="1" cellpadding="0">
+        <tr class="t3-row-header">	  
 	        <td>
-	           <label>
-	               ###TOTAL_COUNT_LABEL###
-	           </label>
+	           <label>###TOTAL_COUNT_LABEL###</label>
 	        </td>
-	        <td>
-	           <span>
-	               ###TOTAL_COUNT###
-	           </span>
-	        </td>
+	        <td class="number">###TOTAL_COUNT###</td>
 	    </tr>
 	    <!-- ###HOOK_SECTION### begin -->
-	         <tr>
+	         <tr class="db_list_normal">
 	            <td>
-		            <div class="linkvalidator_singleOption">
-			            ###OPTION###
-			        </div>
+		            <div class="linkvalidator_singleOption">###OPTION###</div>
 	            </td>
-	            <td>
-	                <span>
-		             ###COUNT###
-		            </span>
-	            </td>
+	            <td class="number">###COUNT###</td>
 	         </tr>
 	    <!-- ###HOOK_SECTION### end -->
     </table>
